test case for postgres unicode string